--- a/prompts.html
+++ b/prompts.html
@@ -499,6 +499,7 @@
         console.log('Day.js initialized with zh-cn locale');
     </script>
     <script src="prompts-data.js"></script>
+    <script src="starry-sky.js"></script>
     <script src="prompts-poetry.js"></script>
     <script>
         // Reveal page after content is ready
